--- a/UniversityLibrary/Info.plist
+++ b/UniversityLibrary/Info.plist
@@ -44,7 +44,8 @@
     
     <key>NSAppTransportSecurity</key>
     <dict>
-        <key>NSAllowsArbitraryLoads</key><true/>
+        <key>NSAllowsArbitraryLoads</key>
+        <true/>
     </dict>
 </dict>
 </plist>
