--- a/firebase-functions/functions/package.json
+++ b/firebase-functions/functions/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "firebase-admin": "~5.4.2",
     "firebase-functions": "^0.7.1",
-    "nodemailer": "^2.4.1"
+    "nodemailer": "^2.4.1",
+    "express": "^4.16.2"
   },
   "private": true
 }
